--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="SheCodes Responsive SEO tutorial project"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -10,7 +14,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Contact</title>
+    <title>Contact page - Croissant Chat</title>
   </head>
   <body>
     <h1 class="mb-5">🥐 Contact us</h1>
@@ -21,9 +25,9 @@
       >
     </p>
     <div class="site-links mt-5">
-      <a href="/">Homepage</a>
-      <span>📸 <a href="/photo.html">Only Croissants</a> </span>
-      <a href="/contact.html">Contact us</a>
+      <a href="/" title="Homepage">Homepage</a>
+      <span>📸 <a href="/photo.html" title="Images">Images</a> </span>
+      <a href="/contact.html" title="Contact us">Contact us</a>
     </div>
   </body>
 </html>
