--- a/photo.html
+++ b/photo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="SheCodes Responsive SEO tutorial project - - all about croissants, with an image, link and a fake contact email"
+      content="SheCodes Responsive SEO tutorial project - all about croissants, with an image, link and a fake contact email"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
